<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/login_username"
        style="@style/edittext"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:text="zwy" />


    <EditText
        android:id="@+id/login_password"
        style="@style/edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="123" />

    <Button
        android:id="@+id/login_button"
        style="@style/button"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/new_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/new_user"
        android:textColor="@color/black"
        android:textSize="15sp" />

</LinearLayout>