<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="75dp"
            android:text="@string/title"
            android:textSize="100sp"
            android:shadowRadius="3.0"
            android:shadowColor="#F9F900"
            android:shadowDx="15.0"
            android:shadowDy="15.0"/>

        <EditText
            android:id="@+id/register_nickname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffffff"
            android:hint="@string/nickname"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="14sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffffff"
            android:hint="@string/username"
            android:paddingLeft="20dp"
            android:textColor="#ff000000"
            android:singleLine="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"

            android:textSize="14sp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffffff"
            android:hint="@string/password"
            android:paddingLeft="20dp"
            android:textColor="#ff000000"
            android:layout_marginLeft="50dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginRight="50dp"
            android:textSize="14sp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000" />

        <EditText
            android:id="@+id/register_houseId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#ffffffff"
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/houseId"
            android:paddingLeft="20dp"
            android:textColor="#ff000000"
            android:textSize="14sp" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"

            android:gravity="center"
            android:text="@string/register"
            android:textColor="#ffffffff"
            android:textSize="16sp" />
    </LinearLayout>





</LinearLayout>